<resources xmlns:background="http://schemas.android.com/apk/res-auto">
    <string name="app_name">TenseTrainer</string>
    <string name="Devs">By <b><u><font color="#FF000000">ireng</font></u></b> company</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="lipsum">Lorem Ipsum is simply dummy text of the printing and typesetting industry. Lorem Ipsum has been the industry\u0027s standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting, remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing Lorem Ipsum passages, and more recently with desktop publishing software like Aldus PageMaker including versions of Lorem Ipsum.</string>
    <string name="htmltexttest"><b>Bold</b> <i>Italic</i> <u>Underlined</u> <br>  Line 2 </br> <font color="#FF0000">Red</font> <a href="http://www.google.com">Google</a> <sup>Superscript</sup> <sub>Subscript</sub></string>
    <string name="SFTcrt">1. <b>Expressing Future Actions</b>\n\n
The primary function of the simple future tense is to express actions or events that will happen after the present moment. It indicates that the action will take place in the future.\n\n

2. <b>Use of Auxiliary Verb</b>\n\n
The simple future tense is formed by using the auxiliary verb \u0027will\u0027 or \u0027shall\u0027 followed by the base form of the main verb. The choice between \u0027will\u0027 and \u0027shall\u0027 depends on the subject of the sentence and the speaker\u0027s intention.\n\n

3. <b>Subject-Verb Agreement</b>\n\n
The auxiliary verb \u0027will\u0027 or \u0027shall\u0027 is conjugated based on the subject of the sentence. For most subjects, the auxiliary verb \u0027will\u0027 is used. For the first person singular (\u0027I\u0027) and the first person plural (\u0027we\u0027), \u0027shall\u0027 can be used instead of \u0027will\u0027 to indicate a strong intention or a suggestion, though it is less common in modern English.\n\n

4. <b>Negation and Interrogation</b>\n\n
To form negative sentences in the simple future tense, the word \u0027not\u0027 is added after the auxiliary verb, or the contracted form \u0027won\u0027t\u0027 or \u0027shan\u0027t\u0027 is used. In interrogative sentences, the auxiliary verb is placed before the subject.\n\n

5. <b>No Time Stipulation</b>\n\n
The simple future tense does not indicate a specific time or duration. It focuses on actions or events that will occur in the future without specifying when they will happen.\n\n

6. <b>Plans, Predictions, Intentions, and Promises</b>\n\n
The simple future tense is commonly used to express plans, predictions, intentions, or promises. It allows speakers to talk about their future activities, make forecasts, state their intentions, or commit to certain actions.\n\n

7. <b>Adverbs of Time</b>\n\n
Adverbs of time can be used with the simple future tense to provide additional context about when the action will happen. For example, \u0027tomorrow,\u0027 \u0027next week,\u0027 or \u0027in the future\u0027 can be used to specify the timing of the future event.\n\n</string>
    <string name="SFTforms">Positive Form (+):\n\n
The positive form of the simple future tense is used to <b>make affirmative statements about future actions or events</b>.\n\n\n
Formula = <font color="#FF0000">Subject</font> + <font color="#666666">will/shall</font> + <font color="#673AB7"></font> <font color="#673AB7">verb 1</font>\n\n\n

Examples:\n\n

<font color="#FF0000">I</font> <font color="#666666">will</font> <font color="#673AB7">travel</font> to Paris next month.\n
<font color="#FF0000">They</font> <font color="#666666">shall</font> <font color="#673AB7">finish</font> their project by the end of the week.\n\n\n

Negative Form (-):\n\n
The negative form of the simple future tense is used to <b>express negation or to indicate that something will not happen in the future</b>.\n\n\n
Formula = <font color="#FF0000">Subject</font> + <font color="#666666">will/shall</font> + <font color="#FFEB3B">not</font> + <font color="#673AB7">verb 1</font>\n\n\n

Examples:\n\n

<font color="#FF0000">She</font> <font color="#666666">will</font> <font color="#FFEB3B">not</font> <font color="#673AB7">attend</font> the party tonight.\n
<font color="#FF0000">We</font> <font color="#666666">shall</font> <font color="#FFEB3B">not</font> <font color="#673AB7">forget</font> to send you the report tomorrow.\n\n\n

Interrogative Form (?):\n\n
The interrogative form of the simple future tense is used to <b>ask questions about future actions or events.</b>\n\n\n
Formula = <font color="#666666">Will/Shall</font> + <font color="#FF0000">subject</font> + <font color="#673AB7">verb 1</font>\n\n\n

Examples:\n\n

<font color="#666666">Will</font> <font color="#FF0000">you</font> <font color="#673AB7">join</font> us for dinner?\n
<font color="#666666">Shall</font> <font color="#FF0000">we</font> <font color="#673AB7">start</font> the meeting now?\n\n\n</string>
    <string name="PCTcrt">1. <b>Ongoing Action in the Past</b>\n\n
The past continuous tense is used to describe an action or event that was in progress at a specific time in the past. It indicates that the action was happening continuously over a period of time.\n\n

2. <b>Background or Context</b>\n\n
The past continuous tense is often used to provide background information or context for another action or event that occurred in the past. It helps to set the stage for the main action.\n\n

3. <b>Specific Time in the Past</b>\n\n
The past continuous tense is used to describe an action or event that was happening at a specific point in the past. It emphasizes that the action was taking place at that particular time.\n\n

4. <b>Interrupted Actions</b>\n\n
The past continuous tense is also used to describe an action that was interrupted by another action or event in the past. It shows that the ongoing action was stopped or halted by something else.\n\n</string>
    <string name="PCTforms">Positive Form (+):\n\n
The positive form of the past continuous tense is used to <b>make affirmative statements about ongoing actions or events that took place in the past</b>. It indicates that something was happening continuously or in progress at a specific time in the past.\n\n\n
Formula = <font color="#FF0000">Subject</font> + <font color="#964B00">was/were</font> + <font color="#673AB7">verb-ing</font>\n\n\n

Example sentences:\n\n

<font color="#FF0000">She</font> <font color="#964B00">was</font> <font color="#673AB7">reading</font> a book when I called her.\n
<font color="#FF0000">We</font> <font color="#964B00">were</font> <font color="#673AB7">walking</font> in the park yesterday evening.\n\n\n

Negative Form (-):\n\n
The negative form of the past continuous tense is used to <b>indicate that an ongoing action or event was not happening in the past</b>. It is used to deny or negate the occurrence of an action.\n\n\n
Formula = <font color="#FF0000">Subject</font> + <font color="#964B00">was/were</font> + <font color="#FFEB3B">not</font> + <font color="#673AB7">verb-ing</font>\n\n\n

Example sentences:\n\n

<font color="#FF0000">He</font> <font color="#964B00">was</font> <font color="#FFEB3B">not</font> <font color="#673AB7">studying</font> when I saw him.\n
<font color="#FF0000">hey</font> <font color="#964B00">were</font> <font color="#FFEB3B">not</font> <font color="#673AB7">playing</font> football at that time.\n\n\n

Interrogative Form (?):\n\n
The interrogative form of the past continuous tense is used to <b>ask questions about ongoing actions or events that took place in the past</b>. It is used to inquire about the circumstances or details of past actions.\n\n\n

Formula = <font color="#964B00">Was/Were</font> + <font color="#FF0000">subject</font> + <font color="#673AB7">verb-ing</font> + ?\n\n\n

Example sentences:\n\n

<font color="#964B00">Was</font> <font color="#FF0000">she</font> <font color="#673AB7">watching</font> TV when the phone rang?\n
<font color="#964B00">Were</font> <font color="#FF0000">they</font> <font color="#673AB7">studying</font> for the exam last night?\n\n</string>
    <string name="PRCTcrt">1. <b>Temporary actions or situations:</b>\n\n
The present continuous tense is often used to describe actions or situations that are temporary or not permanent. It emphasizes that the action or situation is happening now or around the present moment, but it may not continue indefinitely.\n\n

2. <b>Actions in progress:</b>\n\n
The present continuous tense is used to describe actions that are in progress at the time of speaking. It indicates that the action is happening right now, even if it\u0027s not happening at the exact moment of speaking.\n\n

3. <b>Future arrangements:</b>\n\n
The present continuous tense can also be used to talk about future arrangements or plans that have been made. It implies that the action is already confirmed or scheduled to happen in the future.\n\n

4. <b>Emphasis on the action:</b>\n\n
The present continuous tense places emphasis on the ongoing action itself rather than the result or completion of the action. It draws attention to the action happening in real-time.\n\n</string>
    <string name="PRCTforms">Positive Form (+):\n\n
        The positive form of the present continuous tense is used to <b>make affirmative statements about actions or situations that are happening at the time of speaking or around the present moment</b>. It is used to convey information about ongoing activities or temporary states.\n\n\n
Formula = <font color="#FF0000">Subject</font> + <font color="#FF5722">am/is/are</font> + <font color="#673AB7">verb-ing</font> + <font color="#4CAF50">object</font>\n\n\n

Examples:\n\n
<font color="#FF0000">I</font> <font color="#FF5722">am</font> <font color="#673AB7">studying</font> for <font color="#4CAF50">my exam</font>.\n
<font color="#FF0000">She</font> <font color="#FF5722">is</font> <font color="#673AB7">playing</font> <font color="#4CAF50">the piano</font>.\n\n\n

Negative Form (-):\n\n
The negative form of the present continuous tense is used to <b>make negative statements or express the absence of an action or situation in progress</b>. It is used to convey that a particular action is not happening at the time of speaking or around the present moment.\n\n\n

Formula = <font color="#FF0000">Subject</font> + <font color="#FF5722">am/is/are</font> + <font color="#FFEB3B">not</font> + <font color="#673AB7">verb-ing</font> + <font color="#4CAF50">object</font>\n\n\n

Examples:\n\n
<font color="#FF0000">They</font> <font color="#FF5722">are</font> <font color="#FFEB3B">not</font> <font color="#673AB7">working</font> on <font color="#4CAF50">the project</font>.\n
<font color="#FF0000">He</font> <font color="#FF5722">is</font> <font color="#FFEB3B">not</font> <font color="#673AB7">eating</font> <font color="#4CAF50">breakfast</font>.\n\n\n

Interrogative Form (?):\n\n
The interrogative form of the present continuous tense is used to <b>ask questions about ongoing actions or situations</b>. It is used to seek information or clarification about what is happening at the time of speaking or around the present moment.\n\n\n

Formula = <font color="#FF5722">Am/Is/Are</font> + <font color="#FF0000">subject</font> + <font color="#673AB7">verb-ing</font> + <font color="#4CAF50">object?</font>\n\n\n
    Examples:\n\n
<font color="#FF5722">Are</font> <font color="#FF0000">you</font> <font color="#673AB7">watching</font> <font color="#4CAF50">TV?</font>\n
<font color="#FF5722">Is</font> <font color="#FF0000">she</font> <font color="#673AB7">coming</font> to <font color="#4CAF50">the party?</font>\n\n\n</string>
</resources>