<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header Section -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="wrap_content">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="0dp"
            android:src="@drawable/ic_backbt" />

        <!-- Header Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/backButton"
            android:text="Present Continuous Tense"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout"
        android:background="@color/white"
        android:layout_marginTop="1dp">

        <!-- Your existing content goes here -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/PRCTJIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/hijau"
                android:text="Introduction"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/PRCTIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/PRCTJIntro"
                android:text="The present continuous tense is used to describe actions that are happening at the time of speaking or actions that are occurring around the present moment. It is also used to talk about temporary situations or actions that are in progress but may not be happening at the exact moment of speaking."
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/PRCTJCRT"
                android:layout_below="@id/PRCTIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/hijau"
                android:text="Characteristics"
                android:gravity="center"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/PRCTCRT1"
                android:layout_below="@id/PRCTJCRT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_marginTop="30dp"
                android:text="@string/PRCTcrt"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/PRCTJforms"
                android:layout_below="@id/PRCTCRT1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/hijau"
                android:text="Forms"
                android:gravity="center"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/PRCTforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/PRCTJforms"
                android:text="@string/PRCTforms"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/Devs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_below="@id/PRCTforms"
                android:text="@string/Devs"
                android:gravity="center"
                android:background="@color/hijau"
                android:layout_marginTop="20dp"
                android:textSize="10sp"
                android:padding="16dp"/>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
