<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header Section -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="wrap_content">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_backbt" />

        <!-- Header Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/backButton"
            android:text="Simple Future Tense"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout"
        android:background="@color/white"
        android:layout_marginTop="1dp">

        <!-- Your existing content goes here -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/SFTJIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/hijau"
                android:text="Introduction"
                android:textAlignment="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/SFTIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/SFTJIntro"
                android:text="The simple future tense is used to talk about actions or events that will happen after the present moment. It is often used to discuss plans, predictions, intentions, or future facts. In English, the simple future tense is typically formed using the auxiliary verb 'will' or 'shall' followed by the base form of the main verb."
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/SFTJCRT"
                android:layout_below="@id/SFTIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/hijau"
                android:text="Characteristics"
                android:gravity="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/SFTCRT1"
                android:layout_below="@id/SFTJCRT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_marginTop="30dp"
                android:text="@string/SFTcrt"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/SFTJforms"
                android:layout_below="@id/SFTCRT1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/hijau"
                android:text="Forms"
                android:gravity="center"
                android:textSize="40sp" />

            <TextView
                android:id="@+id/SFTforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/SFTJforms"
                android:text="@string/SFTforms"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/Devs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_below="@id/SFTforms"
                android:text="@string/Devs"
                android:gravity="center"
                android:background="@color/hijau"
                android:layout_marginTop="20dp"
                android:textSize="10sp"
                android:padding="16dp"/>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
