<RelativeLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!-- Header Section -->
    <RelativeLayout
        android:id="@+id/headerLayout"
        android:layout_width="match_parent"
        android:background="@color/black"
        android:layout_height="wrap_content">

        <!-- Back Button -->
        <ImageButton
            android:id="@+id/backButton"
            android:layout_width="40dp"
            android:layout_height="40dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentTop="true"
            android:layout_marginStart="16dp"
            android:background="@color/black"
            android:layout_marginTop="10dp"
            android:layout_marginEnd="16dp"
            android:src="@drawable/ic_backbt" />

        <!-- Header Text -->
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_marginStart="25dp"
            android:layout_marginTop="10dp"
            android:layout_toEndOf="@+id/backButton"
            android:text="Past Continuous Tense"
            android:textColor="@color/white"
            android:textSize="24sp" />
    </RelativeLayout>

    <androidx.core.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/headerLayout"
        android:background="@color/white"
        android:layout_marginTop="1dp">

        <!-- Your existing content goes here -->
        <RelativeLayout
            android:layout_width="match_parent"
            android:background="@color/white"
            android:layout_height="match_parent">

            <TextView
                android:id="@+id/PCTJIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:background="@color/hijau"
                android:text="Introduction"
                android:textAlignment="center"
                android:textColor="@color/black"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/PCTIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/PCTJIntro"
                android:text="The past continuous tense is used to describe an ongoing action or event that was happening at a specific point in the past. It emphasizes the duration or continuity of an action in the past. This tense is formed using the past tense of the verb 'to be' (was/were) and the present participle form of the main verb (-ing form)."
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/PCTJCRT"
                android:layout_below="@id/PCTIntro"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/hijau"
                android:text="Characteristics"
                android:gravity="center"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/PCTCRT1"
                android:layout_below="@id/PCTJCRT"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/white"
                android:layout_marginTop="30dp"
                android:text="@string/PCTcrt"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/PCTJforms"
                android:layout_below="@id/PCTCRT1"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:background="@color/hijau"
                android:text="Forms"
                android:gravity="center"
                android:textSize="32sp" />

            <TextView
                android:id="@+id/PCTforms"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/black"
                android:layout_below="@id/PCTJforms"
                android:text="@string/PCTforms"
                android:layout_marginTop="20dp"
                android:textSize="15sp"
                android:padding="16dp"/>

            <TextView
                android:id="@+id/Devs"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:layout_below="@id/PCTforms"
                android:text="@string/Devs"
                android:gravity="center"
                android:background="@color/hijau"
                android:layout_marginTop="20dp"
                android:textSize="10sp"
                android:padding="16dp"/>


        </RelativeLayout>
    </androidx.core.widget.NestedScrollView>
</RelativeLayout>
